fix toggler alignment

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -93,7 +93,7 @@ body {
     top: 0;
     left: 0;
 
-    padding: 0.3rem 0.75rem;
+    padding: 0.3rem 0.85rem;
 
     text-decoration: none;
     border-right: 1px solid $navbar-light-toggler-border-color;
@@ -101,7 +101,7 @@ body {
     .material-icons {
       display: block;
       font-size: 1.75rem;
-      line-height: 2.75rem;
+      line-height: 2.9rem;
       color: #666;
     }
   }
